data/derived/comb/progs/unify/prog1807.ml.out
Characters 739-758:
  -> Format.sprintf "(" ^ ( exprToString e1 ) ^ "+" ^ ( exprToString e2 ) "+" ^ ( exprToString e3 ) ^ ")";;
                                                      ^^^^^^^^^^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
